# alsa-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
examples/: ctl_list.rs  enumerate.rs  midi_enumerate.rs  pcm_enumerate.rs  pcm_record.rs  record.rs  trigger_hstamp.rs
src/: card.rs  chmap.rs  config.rs  ctl.rs  ctl_int.rs  device_name.rs  error.rs  hctl.rs  io.rs  lib.rs  mixer.rs  pcm.rs  pcm_bypass.rs  pcm_direct.rs  poll.rs  rawmidi.rs  seq.rs  ump.rs
src/direct/: asound_ioctl.rs  ffi.rs  pcm.rs
synth-example/: Cargo.toml
synth-example/src/: main.rs
