[package]
name = "alsa"
version = "0.4.3"
authors = ["David Henningsson <diwic@ubuntu.com>"]

description = "Thin but safe wrappers for ALSA (Linux sound API)"
repository = "https://github.com/diwic/alsa-rs"
documentation = "http://docs.rs/alsa"
keywords = ["ALSA", "audio", "sound"]
license = "Apache-2.0/MIT"
categories = ["multimedia::audio", "api-bindings"]
readme = "README.md"
edition = "2018"

[dependencies]
libc = "0.2.65"
alsa-sys = "0.3.0"
bitflags = "1.2.1"
nix = "0.15"

[badges]
is-it-maintained-issue-resolution = { repository = "diwic/alsa-rs" }
is-it-maintained-open-issues = { repository = "diwic/alsa-rs" }
